# sox

./: .gitignore  .gitmodules  CMakeLists.txt  make.ps1
cmake/Modules/: FindInlineSymbol.cmake
lpc10/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  effects_i_dsp.c  sox-config.h.in  sox.c  soxconfig.h  soxconfig.h.in  soxomp.h  util.h  wav.c
